--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,8 @@
             ],
             "styles": [
               "src/theme.less",
-              "src/styles.scss"
+              "src/styles.scss",
+              "./node_modules/video.js/dist/video-js.css"
             ],
             "scripts": []
           },
