--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ng-zorro-antd": "^9.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "video.js": "^7.3.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/video.js": "^7.3.8",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
