--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@amap/amap-jsapi-loader": "0.0.1",
     "@angular/animations": "~9.1.1",
     "@angular/common": "~9.1.1",
     "@angular/compiler": "~9.1.1",
@@ -26,13 +27,14 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
+    "@amap/amap-jsapi-types": "0.0.4",
     "@angular-devkit/build-angular": "~0.901.1",
     "@angular/cli": "~9.1.1",
     "@angular/compiler-cli": "~9.1.1",
     "@angular/language-service": "~9.1.1",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "@types/video.js": "^7.3.8",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
