--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "js-base64": "^2.5.2",
     "ng-zorro-antd": "^9.0.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
@@ -34,6 +35,7 @@
     "@angular/language-service": "~9.1.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/js-base64": "^2.3.1",
     "@types/node": "^12.11.1",
     "@types/video.js": "^7.3.8",
     "codelyzer": "^5.1.2",
