--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "echarts": "^4.7.0",
     "js-base64": "^2.5.2",
     "ng-zorro-antd": "^9.0.2",
     "rxjs": "~6.5.4",
@@ -33,6 +34,7 @@
     "@angular/cli": "~9.1.1",
     "@angular/compiler-cli": "~9.1.1",
     "@angular/language-service": "~9.1.1",
+    "@types/echarts": "^4.4.6",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/js-base64": "^2.3.1",
