--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "dayjs": "^1.8.25",
     "echarts": "^4.7.0",
     "js-base64": "^2.5.2",
     "ng-zorro-antd": "^9.0.2",
